<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"> <!-- Vertical Orientation set -->



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="50dp">

        <TextView
            android:id="@+id/textViewNumber1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/number_1"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/editNumberOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:hint="@string/enter_an_integer" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="50dp">

        <TextView
            android:id="@+id/textViewNumber2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/number_2"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/editNumberTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:hint="@string/enter_another_integer" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_json"
        android:id="@+id/generateJSONButton"
        android:background="#0058b6"
        android:layout_gravity="center"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/blank"
        android:id="@+id/jsonOutput"
        android:inputType="textMultiLine" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/calculateButton"
        android:background="#0058b6"
        android:layout_gravity="center" />
</LinearLayout>


<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".MainActivity">-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/textInputLayout1"-->
<!--        android:layout_width="272dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:layout_editor_absoluteX="138dp"-->
<!--        tools:layout_editor_absoluteY="136dp">-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--        android:layout_width="188dp"-->
<!--        android:layout_height="41dp"-->
<!--        android:hint="Enter an integer"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/textInputEditText"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.474"-->
<!--        app:layout_constraintStart_toEndOf="@+id/textView4"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.747" />-->

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Generate JSON"-->
<!--        tools:layout_editor_absoluteX="127dp"-->
<!--        tools:layout_editor_absoluteY="326dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Number 2"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.128"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.353" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView4"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Number 1"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.128"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.235" />-->

<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--        android:id="@+id/textInputEditText"-->
<!--        android:layout_width="194dp"-->
<!--        android:layout_height="42dp"-->
<!--        android:hint="Enter another Integer"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/button"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/textInputLayout1"-->
<!--        app:layout_constraintHorizontal_bias="0.504"-->
<!--        app:layout_constraintStart_toEndOf="@+id/textView3"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"-->
<!--        app:layout_constraintVertical_bias="0.722" />-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/textInputLayout2"-->
<!--        android:layout_width="275dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:layout_editor_absoluteX="135dp"-->
<!--        tools:layout_editor_absoluteY="220dp">-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->


<!--</androidx.constraintlayout.widget.ConstraintLayout>-->